2012.10.*, Version 0.1.8

* Added ability to shutdown Cloud Commander
thrue terminal command: "cloudcmd exit"

* Fixed bug with showing terminal and viewer
at the same time.

* Fixed bug with appcache config. Windows reads
file not just like Linux.

* Added ability to update thrue git.


2012.10.01, Version 0.1.7

* Changed name of menu files, fixed npm and jitsu
problem with menu showing.

* Fixed bug with empty directorys. If directory
was empty, we could not go in.
* Removed packed versions of files, uglifing
would be doing on-a-fly

* Added ability to use ajax without jquery.

* From now jquery not necessary for Cloud Commander
work, (so start load get faster), but it could be
loaded any time by any extension.

* Fixed bug with getByClass IE version.

* Fixed bug with keyboard not responding when go deeper
in file tree thrue mouse double click.

* Removed property keyBinded. From not it's private
member of KeyBinding class.

* Fixed scrolling bug on non-webkit based browsers.
Function scrollIntoViewIfNeeded was polyfilled.

* Added classic borders to panels.

* Added ability to download files thrue drag'n'drop.

* Fixed bug with setting current file when mouse down.

* Improved borders over CodeMirror and panels thrue css.

* Added ability to watch is file changed wile server is
running

* Moved calling api scrollIntoViewIfNeeded to setCurrentFile.

* Added module is-file-changed.

* Added suport of AppCache. So CloudCommander can work totaly
in offline mode (if connection suddenly lost, all visited
directories would be cached).

* fixed bug with keyboard not responding when click on file.

* Server.js separated to two files: cloudcmd.js and server.js.
Start file is - cloudcmd.js

* Refactored and fixed old bugs in function generateHeaders (server.js).

* Added ability to remove files (on the surface, not for real).

* From now right panel would be always shown no matter js enabled or
disabled in browsers.

* Added plagin terminal ( ` button under TAB).
