@@ -57,8 +57,13 @@ var CloudCommander, io;
                     if(lStdout)
                         lTerm.echo(lStdout);
                     
-                    if(lStderr)
+                    if(lStderr){
+                        /* if it's object - convert is to string' */
+                        if( Util.isObject(lStderr) )
+                            lStderr = JSON.Stringify(lStderr);
+                            
                         lTerm.error(lStderr);
+                    }
                 }
                 Messages = [];
             }
