@@ -60,10 +60,16 @@ function onMessage(pConnNum, pSocket){
                 }
             }
 
-            /* change code page to unicode */
-            if(Win32_b)            
-                pCommand = 'chcp 65001 |' + pCommand;
-            
+            /* if we on windows and command is build in
+             * change code page to unicode becouse
+             * windows use unicode on non English versions
+             */
+            if(Win32_b){
+                
+                var lWinCommand = pCommand.toUpperCase();
+                if( Win32Commands.indexOf(lWinCommand) > 0 )
+                    pCommand = 'chcp 65001 |' + pCommand;
+            }
             if(!ClientFuncs[pConnNum])
                 ClientFuncs[pConnNum] = getExec(pSocket);
             
@@ -95,3 +101,21 @@ function getExec(pSocket){
         console.log(lExec);
     };
 }
+
+
+/* windows commands thet require 
+ * unicode charset on locales 
+ * different then English
+ */
+var Win32Commands   = ['ASSOC', 'AT', 'ATTRIB', 'BREAK', 'CACLS', 'CALL',
+                        'CD', 'CHCP', 'CHDIR', 'CHKDSK', 'CHKNTFS', 'CLS',
+                        'CMD', 'COLOR', 'COMP', 'COMPACT', 'CONVERT', 'COPY',
+                        'DATE', 'DEL', 'DIR', 'DISKCOMP', 'DISKCOPY', 'DOSKEY',
+                        'ECHO', 'ENDLOCAL', 'ERASE', 'EXIT', 'FC', 'FIND',
+                        'FINDSTR', 'FOR', 'FORMAT', 'FTYPE', 'GOTO', 'GRAFTABL',
+                        'HELP', 'IF', 'LABEL', 'MD', 'MKDIR', 'MODE', 'MORE',
+                        'MOVE', 'PATH', 'PAUSE', 'POPD', 'PRINT', 'PROMPT',
+                        'PUSHD', 'RD', 'RECOVER', 'REM', 'REN', 'RENAME',
+                        'REPLACE', 'RMDIR', 'SET', 'SETLOCAL', 'SHIFT', 'SORT',
+                        'START', 'SUBST', 'TIME', 'TITLE', 'TREE', 'TYPE',
+                        'VER', 'VERIFY', 'VOL', 'XCOPY'];
